# SEP4ExercisesAndHandins

./: .gitignore  .gitmodules  README.md  asset-manifest.json  index.html  manifest.json
ADS1/Assignment1/: README.md  pom.xml
ADS1/Assignment2/: README.md  pom.xml
ADS1/Assignment3/: README.md  pom.xml
ADS1/Lesson 1 - Big-Oh and Collections/: Exercises for lesson 1.docx  ExercisesADS11.docx
ADS1/Lesson 2 - Abstract Datatypes/: ExercisesADS2.docx
ADS1/Lesson 3 - Binary Trees/: ExercisesADS3.docx
ADS1/Lesson 4 - AVL and Red-black Trees/: ExercisesADS4.docx
ADS1/Lesson 5 - Priority Queues and Sorting/: ArrayMinHeap.java  (+1 more)
DOC1/: linux commands.txt
ESW1/: README.md
ESW1/Lesson4/: CMakeLists.txt  LinkedList.c  LinkedList.h  calc.c  mystr.c  mystr.h  rectangle.c  rectangle.h
ESW1/Lesson4/Google_tests/: CMakeLists.txt  test_calc.cpp  test_linked_list.cpp  test_mystr.cpp  test_rectangle.cpp
pokemon-3d-models/: 004 Charmander-1.gltf  005 Charmeleon-1.gltf  007 Squirtle-1.gltf  009 Blastoise-1.gltf  011 Metapod-1.gltf  012 Butterfree-1.gltf  013 Weedle-1.gltf  014 Kakuna-1.gltf  016 Pidgey-1.gltf  018 Pidgeot-1.gltf  019 Rattata-1.gltf  020 Raticate-1.gltf  021 Spearow-1.gltf  022 Fearow-1.gltf  023 Ekans-1.gltf  024 Arbok-1.gltf  028 Sandslash-1.gltf  030 Nidorina-1.gltf  034 Nidoking-1.gltf  040 Wigglytuff-1.gltf  043 Oddish-1.gltf  044 Gloom-1.gltf  045 Vileplume-1.gltf  047 Parasect-1.gltf  048 Venonat-1.gltf  051 Dugtrio-1.gltf  052 Meowth-1.gltf  054 Psyduck-1.gltf  055 Golduck-1.gltf  059 Arcanine-1.gltf  061 Poliwhirl-1.gltf  062 Poliwrath-1.gltf  065 Alakazam-1.gltf  066 Machop-1.gltf  067 Machoke-1.gltf  070 Weepinbell-1.gltf  071 Victreebel-1.gltf  072 Tentacool-1.gltf  074 Geodude-1.gltf  076 Golem-1.gltf  (+150 more)
(+427 files in other folders)
